--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -10,7 +10,7 @@
 }
 
 
-.category-list {
+#category-list {
     margin-top: 3rem;
     gap: 1rem;
 }
@@ -37,4 +37,8 @@
 .category-item:hover {
     box-shadow: 0px 0px;
     transition: box-shadow 0.15s linear 0s;
+}
+
+.welcome-wrap{
+    margin-top: 3rem;
 }
