--- a/src/components/Navbar/Productbox/Productbox.css
+++ b/src/components/Navbar/Productbox/Productbox.css
@@ -1,3 +1,13 @@
 .product-img {
     height: 400px;
+    display: flex;
+    justify-content: center;
+}
+
+.product-item{
+    display: block;
+}
+
+.product-img >img{
+    max-height: 70%;
 }
